# ot-harjoitustyo

./: .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
data/: schema.sql  seed_data.sql
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tyoaikakirjapito.md  vaatimusmaarittely.md
laskarit/viikko3/: monopoli.md  sekvenssikaavio.md
src/: app_enums.py  app_state.py  build.py  config.py  db.py  game.py  level_config.py  main.py  player.py
src/entities/: general_statistics.py  user.py  user_statistics.py
src/models/: hit.py  point.py  size.py  sprite_info.py
src/repositories/: general_statistics_repository.py  user_repository.py  user_statistics_repository.py
src/services/: base_sprite_service.py  bullet_service.py  enemy_service.py  general_statistics_service.py  level_service.py  player_service.py  service_helpers.py  session_service.py  shooting_service.py  shooting_sprite_service.py  user_service.py  user_statistics_service.py
src/tests/: base_sprite_service_test.py  bullet_test.py  game_test.py  player_test.py  test_base_sprite_service.py  test_bullet_service.py  test_db.py  test_enemy_service.py  test_game.py  test_game_helpers.py  test_general_statistics_repository.py  test_general_statistics_service.py  test_helpers.py  test_level_service.py  test_player_service.py  test_positions_helpers.py  test_session_service.py  test_user_repository.py  test_user_service.py  test_user_statistics_repository.py  test_user_statistics_service.py
src/ui/: build.py  bullet.py  enemy.py  game.py  player.py
src/utils/: game_helpers.py  (+3 more)
(+24 files in other folders)
