[project]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = [{ name = "Saara Pakarinen" }]
readme = "README.md"
requires-python = "^3.8"
dependencies = [
    "coverage (>=6.5.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

